# box3d-premake5

./: CMakeLists.txt  README.md  build.sh  premake5.lua
.github/workflows/: build.yml
benchmark/: main.c
benchmark/amd7950x_sse2/: compound_capsules.csv  compound_hulls.csv  joint_grid.csv  junkyard.csv  large_pyramid.csv  many_pyramids.csv  rain.csv  washer.csv  welded_hulls.csv
data/dumps/single_box/: box3d_dump.inl
include/box3d/: base.h  box3d.h  collision.h  constants.h  id.h  math_functions.h  types.h
samples/: CMakeLists.txt  camera.cpp  camera.h  font.cpp  geo_buffer.cpp  geo_buffer.h  imconfig.h  main.cpp  renderer.cpp  renderer.h  sample.cpp  sample.h  sample_benchmark.cpp  sample_bodies.cpp  sample_character.cpp  sample_collision.cpp  sample_compound.cpp  sample_continuous.cpp  sample_determinism.cpp  sample_events.cpp  sample_geometry.cpp  sample_issues.cpp  sample_joint.cpp  sample_manifold.cpp  sample_mesh.cpp  sample_ragdoll.cpp  sample_robustness.cpp  sample_shapes.cpp  sample_stacking.cpp  sample_tree.cpp  scene.cpp  scene.h  shader.cpp  shader.h  ssao_buffer.cpp  ssao_buffer.h  utility.h
shaders/: common.glsl  deferred_lighting_fs.glsl  depth_copy_fs.glsl  forward.fs  forward.vs  geometry_vs.glsl  mesh.fs  mesh.vs  mesh_edge.vs  mesh_forward.fs  mesh_forward.vs  mesh_shadow.vs  ssao_blur_fs.glsl  ssao_fs.glsl
shared/: CMakeLists.txt  benchmarks.c  benchmarks.h  determinism.c  human.c  human.h  stability.h  utils.h
src/: CMakeLists.txt  aabb.c  aabb.h  algorithm.h  arena_allocator.c  arena_allocator.h  bitset.h  block_allocator.c  block_allocator.h  body.c  body.h  box3d.natvis  broad_phase.c  broad_phase.h  capsule.c  compound.c  compound.h  constraint_graph.h  contact.c  contact.h  contact_solver.c  contact_solver.h  container.h  convex_manifold.c  core.c  core.h  ctz.h  distance.c  distance_joint.c  dynamic_tree.c  height_field.c  hull.c  id_pool.h  island.h  joint.c  joint.h  manifold.c  manifold.h  math_functions.c  math_internal.h  (+27 more)
test/: CMakeLists.txt  main.c  test_collision.c  test_compound.c  test_container.c  test_determinism.c  test_height_field.c  test_hull.c  test_math.c  test_mover.c  test_shape.c  test_world.c
